imported from archive 3.4.2.0

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 -->
 		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
-		<meta name="edsy-versions-html" id="edsy_versions_html" content="34224,34224,34224,34224"><!-- HTML,CSS,DB,JS -->
+		<meta name="edsy-versions-html" id="edsy_versions_html" content="34290,34224,34290,34224"><!-- HTML,CSS,DB,JS -->
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="-x-Content-Security-Policy" content="default-src 'self'; base-uri 'none'; form-action 'none'; object-src 'none'; style-src 'self' 'unsafe-inline';  connect-src 'self' http://www.example.com">
+		<meta http-equiv="-x-Content-Security-Policy" content="default-src 'self'; base-uri 'none'; form-action 'none'; object-src 'none'; style-src 'self' 'unsafe-inline'">
 		<link rel="stylesheet" type="text/css" href="edsy.css">
 		<link rel="icon" sizes="16x16 32x32" href="favicon.ico">
 		<link rel="icon" sizes="16x16" href="favicon-16.png">
@@ -142,10 +142,10 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 						<path d="M 6.5,0 a 6.5,6.5 0 0 1 0,13 a 6.5,6.5 0 0 1 0,-13 z M 6.5,2.5 a 4,4 0 0 0 0,8 a 4,4 0 0 0 0,-8 z"/>
 					</symbol>
 					<symbol id="icon_maximize" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
-						<path d="M 0,0 h 3 v 1 h -1.25 l 2,2 -0.75,0.75 -2,-2 v 1.25 h -1 z M 13,0 v 3 h -1 v -1.25 l -2,2 -0.75,-0.75 2,-2 h -1.25 v -1 z M 0,13 v -3 h 1 v 1.25 l 2,-2 0.75,0.75 -2,2 h 1.25 v 1 z M 13,13 h -3 v -1 h 1.25 l -2,-2 0.75,-0.75 2,2 v -1.25 h 1 z M 4,4 h 5 v 5 h -5 z M 5,5 v 3 h 3 v -3 z"/>
+						<path d="M 0,0 h 4.75 l -1.75,1.75 2.75,2.75 -1.25,1.25 -2.75,-2.75 -1.75,1.75 z M 13,0 v 4.75 l -1.75,-1.75 -2.75,2.75 -1.25,-1.25 2.75,-2.75 -1.75,-1.75 z M 0,13 v -4.75 l 1.75,1.75 2.75,-2.75 1.25,1.25 -2.75,2.75 1.75,1.75 z M 13,13 h -4.75 l 1.75,-1.75 -2.75,-2.75 1.25,-1.25 2.75,2.75 1.75,-1.75 z"/>
 					</symbol>
 					<symbol id="icon_minimize" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
-						<path d="M 8,8 h 3 v 1 h -1.25 l 2,2 -0.75,0.75 -2,-2 v 1.25 h -1 z M 5,8 v 3 h -1 v -1.25 l -2,2 -0.75,-0.75 2,-2 h -1.25 v -1 z M 8,5 v -3 h 1 v 1.25 l 2,-2 0.75,0.75 -2,2 h 1.25 v 1 z M 5,5 h -3 v -1 h 1.25 l -2,-2 0.75,-0.75 2,2 v -1.25 h 1 z M 0,0 h 13 v 13 h -13 z M 1,1 v 11 h 11 v -11 z"/>
+						<path d="M 7,7 h 4.75 l -1.75,1.75 2.75,2.75 -1.25,1.25 -2.75,-2.75 -1.75,1.75 z M 5,7 v 4.75 l -1.75,-1.75 -2.75,2.75 -1.25,-1.25 2.75,-2.75 -1.75,-1.75 z M 7,5 v -4.75 l 1.75,1.75 2.75,-2.75 1.25,1.25 -2.75,2.75 1.75,1.75 z M 5,5 h -4.75 l 1.75,-1.75 -2.75,-2.75 1.25,-1.25 2.75,2.75 1.75,-1.75 z"/>
 					</symbol>
 				</defs>
 			</svg>
@@ -163,7 +163,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 					<label class="togglebutton"><input name="tab" type="radio" value="options"><div><svg class="iconsvg unknown"><use xlink:href="#icon_unknown"/></svg><svg class="iconsvg repair"><use xlink:href="#icon_repair"/></svg><span>Help</span></div></label>
 				</form>
 				<div id="header_version">
-					<abbr title="updated 2019-07-28">v3.4.2b4</abbr>
+					<abbr title="updated 2019-08-02">v3.4.2</abbr>
 					<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X76V6PNF8CAV4&source=url"><img src="btn_donate_TN.gif" width="56" height="21"></a>
 				</div>
 			</div>
