--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 -->
 		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
-		<meta name="edsy-versions-html" id="edsy_versions_html" content="34290,34224,34290,34224"><!-- HTML,CSS,DB,JS -->
+		<meta name="edsy-versions-html" id="edsy_versions_html" content="34291,34291,34291,34291"><!-- HTML,CSS,DB,JS -->
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -163,7 +163,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 					<label class="togglebutton"><input name="tab" type="radio" value="options"><div><svg class="iconsvg unknown"><use xlink:href="#icon_unknown"/></svg><svg class="iconsvg repair"><use xlink:href="#icon_repair"/></svg><span>Help</span></div></label>
 				</form>
 				<div id="header_version">
-					<abbr title="updated 2019-08-02">v3.4.2</abbr>
+					<abbr title="updated 2019-08-08">v3.4.2.1</abbr>
 					<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X76V6PNF8CAV4&source=url"><img src="btn_donate_TN.gif" width="56" height="21"></a>
 				</div>
 			</div>
@@ -798,7 +798,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 						<section>
 							<header>Options</header>
 							<div>
-								Insurance Level &mdash; Select your insurance coverage level to calculate rebuy costs.
+								<b>Insurance Level</b>
+								&mdash; Select your insurance coverage level to calculate rebuy costs.
 								<dl>
 									<dd><label class="checkbox left"><input type="radio" name="insurance" value="9500"><div><div class="radio"></div><span>95.0% (Standard)</span></div></label></dd>
 									<dd><label class="checkbox left"><input type="radio" name="insurance" value="9625"><div><div class="radio"></div><span>96.3% (Beta backer)</span></div></label></dd>
@@ -817,6 +818,21 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 								that it will not be possible to actually fit them in-game.
 							</div>
 							<div>
+								<b>Dynamic Outfitting Modes</b>
+								&mdash; Some of the three outfitting display panels are usually hidden at narrower browser widths;
+								you can override that behavior by disabling specific modes, but this may force the display to scroll horizontally.
+								<dl>
+									<dd><label class="checkbox left"><input type="checkbox" name="show1"><div><div class="check"></div><span>1-Panel Mode</span></div></label></dd>
+									<dd><label class="checkbox left"><input type="checkbox" name="show2"><div><div class="check"></div><span>2-Panel Mode</span></div></label></dd>
+									<dd><label class="checkbox left"><input type="checkbox" name="show3"><div><div class="check"></div><span>3-Panel Mode</span></div></label></dd>
+								</dl>
+							</div>
+							<div>
+								<label class="checkbox left"><input type="checkbox" name="hidestats"><div><div class="check"></div><span>Dynamic Statistics Panels</span></div></label>
+								&mdash; Some of the least recently enabled statistics panels are usually hidden at narrower browser widths;
+								you can disable that behavior, but this may force the display to scroll horizontally.
+							</div>
+							<div>
 								<button id="options_backup" name="backup">Backup All Data</button>
 								&mdash; Export all stored builds, modules, and other preferences in a structured format suitable for backup or transfer to another device or browser.
 							</div>
@@ -825,7 +841,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 							<header>Contact Me</header>
 							<ul>
 								<li><a href="https://discord.gg/5JSnnV4">discord</a></li>
-								<li><a href="https://forums.frontier.co.uk/threads/elite-shipyard.92900/">forum</a></li>
+								<li><a href="https://forums.frontier.co.uk/threads/518673/">forum</a></li>
 								<li><a href="https://www.reddit.com/message/compose/?to=taleden&subject=EDSY">reddit</a></li>
 								<li><a href="#" id="contact_email">email</a></li>
 							</ul>
