--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 -->
 		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
-		<meta name="edsy-versions-html" id="edsy_versions_html" content="35041,34294,35041,34294"><!-- HTML,CSS,DB,JS -->
-		<meta name="last-modified" id="last_modified" content="2019-09-19">
+		<meta name="edsy-versions-html" id="edsy_versions_html" content="35341,35341,35341,35341"><!-- HTML,CSS,DB,JS -->
+		<meta name="last-modified" id="last_modified" content="20191015">
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +42,12 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 						<circle cx="6.5" cy="1.5" r="1.5"/>
 						<circle cx="6.5" cy="6.5" r="1.5"/>
 						<circle cx="6.5" cy="11.5" r="1.5"/>
+					</symbol>
+					<symbol id="icon_minus" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<path d="M 1,5 h 11 v 3 h -11 z"/>
+					</symbol>
+					<symbol id="icon_plus" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<path d="M 1,5 h 4 v -4 h 3 v 4 h 4 v 3 h -4 v 4 h -3 v -4 h -4 z"/>
 					</symbol>
 					<symbol id="icon_ignore" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
 						<path d="M 6.5,0.75 a 5.75,5.75 0 1 1 0,11.5 a 5.75,5.75 0 1 1 0,-11.5 M 6.5,2.25 a 4.25,4.25 0 1 0 0,8.5 a 4.25,4.25 0 1 0 0,-8.5 z M 11.25,0.5 l 1.25,1.25 -10.75,10.75 -1.25,-1.25 z"/>
@@ -79,6 +85,9 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 						<circle cx="2" cy="11" r="2"/>
 						<polygon points="8,3.25 9.75,5 3.75,11 2,9.25"/>
 						<path d="M 11.25,0 l -1.5,1.5 v 1.75 h 1.75 l 1.5,-1.5 v 1 a 2.75,2.75 0 1 1 -2.75,-2.75 z"/>
+					</symbol>
+					<symbol id="icon_analysis" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<path d="M 1,3 h 2 v 10 h -2 z M 4,9 h 2 v 4 h -2 z M 7,0 h 2 v 13 h -2 z M 10,6 h 2 v 7 h -2 z"/>
 					</symbol>
 					<symbol id="icon_warning" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
 						<path d="M 6.5,0 l 6.5,13 -13,0 z M 6.5,2.5 l -4.75,9.5 9.5,0 z M 5.75,5.5 a 0.75,0.75 0 0 1 1.5,0 v 3 a 0.75,0.75 0 0 1 -1.5,0 z"/>
@@ -166,6 +175,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 				<form id="page_tabs" name="header">
 					<label class="togglebutton"><input name="tab" type="radio" value="shipyard"><div><svg class="iconsvg shipyard"><use xlink:href="#icon_shipyard"/></svg><span>Shipyard</span></div></label>
 					<label class="togglebutton"><input name="tab" type="radio" value="outfitting"><div><svg class="iconsvg turreted"><use xlink:href="#icon_turreted"/></svg><span>Outfitting</span></div></label>
+					<label class="togglebutton"><input name="tab" type="radio" value="analysis"><div><svg class="iconsvg analysis"><use xlink:href="#icon_analysis"/></svg><span>Analysis</span></div></label>
 					<label class="togglebutton"><input name="tab" type="radio" value="options"><div><svg class="iconsvg unknown"><use xlink:href="#icon_unknown"/></svg><svg class="iconsvg repair"><use xlink:href="#icon_repair"/></svg><span>Help</span></div></label>
 				</form>
 				<div id="header_version">
@@ -180,6 +190,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 						<label class="togglebutton"><input name="tab" type="radio" value="storedbuilds"><div>Stored</div></label>
 					</div>
 					<div id="shipyard_container">
+						<div id="shipyard_ships_container"></div>
+						<div id="shipyard_storedbuilds_container"></div>
 					</div>
 				</form>
 				<div id="page_body_outfitting" class="">
@@ -838,6 +850,200 @@ Frontier Customer Services (https://forums.frontier.co.uk/index.php?threads/elit
 						</div>
 					</form>
 				</div>
+				<form id="page_body_analysis" name="analysis" class="">
+					<div id="analysis_tabs">
+						<label class="togglebutton"><input name="tab" type="radio" value="retrofit"><div>Retrofit</div></label>
+						<label class="togglebutton"><input name="tab" type="radio" value="compare"><!-- TODO <div>Compare</div> --></label>
+					</div>
+					<div id="analysis_container">
+						<div id="analysis_compare_container"></div>
+						<div id="analysis_retrofit_container">
+							<div class="analysis_retrofit_section">
+								<div id="analysis_retrofit_builds" class="analysis_retrofit_panel">
+									<div class="analysis_retrofit_divider">
+										<header>Builds</header>
+									</div>
+									<div class="scroller">
+										<table id="analysis_retrofit_builds_table" class="striped">
+											<thead>
+												<tr>
+													<td class="stickytop" width="0%"><label class="checkbox"><input type="checkbox" name="retrofit_builds_show_all" checked><div><div class="check"></div></div></label></td>
+													<th class="stickytop" width="50%">Target Build</th>
+													<th class="stickytop" width="50%">Base Build</th>
+													<td class="stickytop tar" width="0%"><button name="retrofit_builds_add"><svg class="iconsvg plus"><use xlink:href="#icon_plus"/></svg></button></td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td><label class="checkbox"><input type="checkbox" name="retrofit_builds_show_" checked><div><div class="check"></div></div></label></td>
+													<td><select name="retrofit_builds_target_">
+														<option value="" selected>(Current Build)</option>
+													</select></td>
+													<td><select name="retrofit_builds_base_">
+														<option value="" selected>(Stock Ship)</option>
+													</select></td>
+													<td class="tar"><button name="retrofit_builds_delete_"><svg class="iconsvg minus"><use xlink:href="#icon_minus"/></svg></button></td>
+												</tr>
+											</tbody>
+											<!-- TODO delete in favor of + button
+											<tfoot>
+												<tr>
+													<td></td>
+													<th><select name="retrofit_builds_add">
+														<option value="" selected>(Add Retrofit...)</option>
+														<option value="" selected>(Current Build)</option>
+													</select></th>
+													<th></th>
+													<td></td>
+												</tr>
+											</tfoot>
+											-->
+										</table>
+									</div>
+								</div>
+								<div id="analysis_retrofit_setup" class="analysis_retrofit_panel">
+									<div class="analysis_retrofit_divider">
+										<header>Settings</header>
+									</div>
+									<table>
+										<tbody>
+											<tr>
+												<td>Re-buy if discounted less than</td>
+												<td colspan=2><select name="retrofit_setup_discount"></select></td>
+											</tr>
+											<tr>
+												<td>Re-buy if engineered up to</td>
+												<td colspan=2><select name="retrofit_setup_disceng">
+													<option value="0" selected>grade 0 (unengineered)</option>
+													<option value="1">grade 1</option>
+													<option value="2">grade 2</option>
+													<option value="3">grade 3</option>
+													<option value="4">grade 4</option>
+													<option value="5">grade 5 (always)</option>
+												</select></td>
+											</tr>
+											<tr>
+												<td>Apply blueprints up to</td>
+												<td><select name="retrofit_setup_bpgrade">
+													<option value="0">grade 0 (ignore)</option>
+													<option value="1">grade 1</option>
+													<option value="2">grade 2</option>
+													<option value="3">grade 3</option>
+													<option value="4">grade 4</option>
+													<option value="5" selected>grade 5</option>
+												</select></td>
+												<td><select name="retrofit_setup_bproll">
+													<option value="0">0%</option>
+													<option value="0.05">5%</option>
+													<option value="0.10">10%</option>
+													<option value="0.15">15%</option>
+													<option value="0.20">20%</option>
+													<option value="0.25">25%</option>
+													<option value="0.30">30%</option>
+													<option value="0.35">35%</option>
+													<option value="0.40">40%</option>
+													<option value="0.45">45%</option>
+													<option value="0.50">50%</option>
+													<option value="0.55">55%</option>
+													<option value="0.60">60%</option>
+													<option value="0.65">65%</option>
+													<option value="0.70">70%</option>
+													<option value="0.75">75%</option>
+													<option value="0.80">80%</option>
+													<option value="0.85">85%</option>
+													<option value="0.90">90%</option>
+													<option value="0.95">95%</option>
+													<option value="1" selected>100%</option>
+												</select></td>
+											</tr>
+											<tr>
+												<td>Rolls to complete each grade</td>
+												<td colspan=2>
+													<input type="text" name="retrofit_setup_rolls1" size=2 value="1.5">
+													<input type="text" name="retrofit_setup_rolls2" size=2 value="2">
+													<input type="text" name="retrofit_setup_rolls3" size=2 value="3">
+													<input type="text" name="retrofit_setup_rolls4" size=2 value="4.5">
+													<input type="text" name="retrofit_setup_rolls5" size=2 value="9">
+												</td>
+											</tr>
+											<tr>
+												<td>Apply experimental effects</td>
+												<td colspan=2><select name="retrofit_setup_expeffect">
+													<option value="">never</option>
+													<option value="wpn">to weapons only</option>
+													<option value="wpn,cpp">to weapons and PPs</option>
+													<option value="wpn,cpp,cfsd">to weapons, PPs, and FSDs</option>
+													<option value="all" selected>always</option>
+												</select></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+							<button name="retrofit_builds_run" class="text">Generate Retrofit Report</button>
+							<div class="analysis_retrofit_section">
+								<div id="analysis_retrofit_steps" class="analysis_retrofit_panel">
+									<div class="analysis_retrofit_divider">
+										<header>Checklist</header>
+										<button name="retrofit_steps_copy"><svg class="iconsvg clipboard"><use xlink:href="#icon_clipboard"/></svg></button>
+									</div>
+									<div class="scroller">
+										<table id="analysis_retrofit_steps_table" class="striped">
+											<thead>
+												<tr>
+													<td width="0%" class="stickytop"><label class="checkbox"><input type="checkbox" name="retrofit_steps_show_all" checked><div><div class="check"></div></div></label></td>
+													<th class="stickytop retrofit_steps_build">Build</th>
+													<th class="stickytop">Module</th>
+													<th width="0%" class="stickytop">Act</th>
+													<th class="stickytop">Details</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td><label class="checkbox"><input type="checkbox" name="retrofit_steps_show_" checked><div><div class="check"></div></div></label></td>
+													<td class="retrofit_steps_build">Sidewinder</td>
+													<td>1C Lightweight Alloy</td>
+													<td>Eng</td>
+													<td>Heavy Duty G1 x5</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+								<div id="analysis_retrofit_costs" class="analysis_retrofit_panel">
+									<div class="analysis_retrofit_divider">
+										<header>Materials</header>
+										<button name="retrofit_costs_copy"><svg class="iconsvg clipboard"><use xlink:href="#icon_clipboard"/></svg></button>
+									</div>
+									<div class="scroller">
+										<table id="analysis_retrofit_costs_table" class="striped">
+											<thead>
+												<tr>
+													<th width="100%" class="stickytop">Item</th>
+													<th width="0%" class="stickytop">Type</th>
+													<th width="0%" class="stickytop">Lvl</th>
+													<th width="0%" class="stickytop">Qty</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Credits</td>
+													<td colspan=3 class="tar">0</td>
+												</tr>
+												<tr>
+													<td>Proto Radiolic Alloy</td>
+													<td>Mfc</td>
+													<td>G5</td>
+													<td class="tar">3</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</form>
 				<form id="page_body_options" name="options">
 					<div id="options_container">
 						<section>
